--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.4</version>
+		<version>2.6.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ssotter</groupId>
 	<artifactId>sscatalog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>sscatalog</name>
-	<description>ssCatalog Sergio Sotter</description>
+	<description>ssCaralog Sergio Sotter</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
